--- a/content/react-is-cool.mdx
+++ b/content/react-is-cool.mdx
@@ -14,7 +14,7 @@ La réponse est 42.
 
 ## Je peux faire du HTML ?
 
-<div style={{background: "#ecf0f1", padding: 8}}>
+<div style={{ padding: 8}}>
   <span style={{fontSize: "2.5rem", fontWeight: "bold"}}>Oui.</span>
   <span style={{fontSize: "1.2rem", fontWeight: "normal"}}>Tu</span>
   <span style={{fontSize: "1.5rem", fontWeight: "normal"}}>peux</span>
@@ -23,9 +23,3 @@ La réponse est 42.
 </div>
 
 ## Faire du code ? OUI !
-
-```jsx
-const React = () => {
-  return "cool"
-}
-```
